...
import NavigationRouter

public struct View3A: RoutableView {
    public var body: some SwiftUI.View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                Text("This is the first view of Module 3.")
                    .font(.body)
                    .foregroundColor(.secondary)
                
                Spacer()
                
                RoutedLink(to: "/view3B") {
                    HStack {
                        VStack(alignment: .leading, spacing: 10) {
                            Text("Navigate to view 3B")
                                .bold()
                                .foregroundColor(.white)
                                .accessibility(identifier: "testMultipleNavigations2")
                            
                            Text("(without replacing stack)")
                                .font(.footnote)
                                .foregroundColor(.white)
                        }
                        
...
