...
import NavigationRouter

public struct View3C: RoutableView {
    public var body: some SwiftUI.View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                Text("This is the third view of Module 3.")
                    .font(.body)
                    .foregroundColor(.secondary)
                
                Spacer()
                
                RoutedLink(to: "/view1A", replace: true, animation: .right) {
                    HStack {
                        VStack(alignment: .leading, spacing: 10) {
                            Text("Navigate to view 1A")
                                .bold()
                                .foregroundColor(.white)
                                .accessibility(identifier: "testMultipleNavigations4")
                            
                            Text("(back to root)")
                                .font(.footnote)
                                .foregroundColor(.white)
                        }
                        
...
