...
import NavigationRouter

public struct View3B: RoutableView {
    public var body: some SwiftUI.View {
        ScrollView {
            VStack(alignment: .leading, spacing: 20) {
                Text("This is the second view of Module 3.")
                    .font(.body)
                    .foregroundColor(.secondary)
                
                Spacer()
                
                RoutedLink(to: "/view3C", replace: true, animation: .left) {
                    HStack {
                        VStack(alignment: .leading, spacing: 10) {
                            Text("Navigate to view 3C")
                                .bold()
                                .foregroundColor(.white)
                                .accessibility(identifier: "testMultipleNavigations3")
                            
                            Text("(replacing stack)")
                                .font(.footnote)
                                .foregroundColor(.white)
                        }
                        
...
